swish-0.6.2
-Fixed performance problems with small files.
-Fixed bug causing ZIP files to be unpacked as the were copied.
-New Brazilian Portuguese translation.
-Updated Dutch, German, Chinese (Simplified), Italian and Portuguese
 translations.

swish-0.6.1
-Significant speed improvement.
-Installer supports Windows 8.
-Better error reporting when copying to a remote server.
-Fixed bug where renaming a folder did not change the name displayed.
-Fixed bug where files did not appear after copying to remote server.
-Hindi, Bulgarian, Portuguese, Swedish and Chinese (Simplified) translations.

swish-0.6.0
-Added double-click file opening.
-Downgraded to libssh2 1.2.7 to fix incomplete file transfers.

swish-0.5.4
-Added support for symlinks.
-Display error message if drag-and-drop fails.
-Japanese, Polish, Slovak, Hungarian and Chinese translations.

swish-0.4.6
-Fixed major installer problem which broke all new installations as it failed
 to register an interface.
-Fixed problem that left assertion checks in release builds.

swish-0.4.5
-Added ability to create new folders.
-Added auto-updater.
-More useful error messages.
-Better error dialogues.
-Fixed pasting files to the server.  This may have been broken for a long time!
-Fixed problem with port numbers above 999 in some locales.
-Fixed bug where pressing Cancel showed an error message.
-Fixed bug causing Explorer Window to flash when navigating between folders.
-Italian translation.

swish-0.4.4
-64-bit support.
-Windows XP 'webtask' pane.
-Hebrew, Czech, Spanish, French and Turkish translations.

swish-0.4.2
-Explicitly prevent 64-bit installation.
-Fix bug where sessions couldn't be restored until Explorer restarted.
-Fix bug with non-ASCII Windows usernames.

swish-0.4.1
-Write speeds 4x faster.
-Huge reduction in GUI memory usage.
-Confirmation before overwriting existing files.
-Improved write progress indicator.
-Better error reporting.
-Fix bug where 'Remove' option missing from host menu. 