@@ -6,11 +6,11 @@
     <description>Appcast for Swish updates.</description>
     <language>en</language>
     <item>
-      <title>Version 0.6.2</title>
-      <sparkle:releaseNotesLink>http://www.swish-sftp.org/autoupdate/NEWS-0.6.2.html</sparkle:releaseNotesLink>
-      <pubDate>13 May 2012</pubDate>
-      <enclosure url="http://sourceforge.net/projects/swish/files/swish/swish-0.6.2/swish-0.6.2.exe/download"
-                 sparkle:version="0.6.2"
+      <title>Version 0.6.3</title>
+      <sparkle:releaseNotesLink>http://www.swish-sftp.org/autoupdate/NEWS-0.6.3.html</sparkle:releaseNotesLink>
+      <pubDate>28 May 2012</pubDate>
+      <enclosure url="http://sourceforge.net/projects/swish/files/swish/swish-0.6.3/swish-0.6.3.exe/download"
+                 sparkle:version="0.6.3"
                  type="application/octet-stream"/>
     </item>
   </channel>
