@@ -1,3 +1,9 @@
+swish-0.6.3
+-Fixed errors with Windows 8.
+-Disabled compression to support a greater range of SSH servers.
+-Updated German, Italian, Japanese, Portuguese (Brazil), Chinese (Simplified),
+ Chinese (Traditional) and French translations.
+
 swish-0.6.2
 -Fixed performance problems with small files.
 -Fixed bug causing ZIP files to be unpacked as the were copied.
